# prolog-lab

./: .gitignore  README.md
client/: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.json  index.d.ts  nuxt.config.ts  package.json  tsconfig.json  utils.ts
client/api/: ApiClient.ts  index.ts
client/api/core/: AxiosHttpRequest.ts  BaseHttpRequest.ts  OpenAPI.ts
client/api/models/: DeletedObjects.ts  Gender.ts  HTTPValidationError.ts  InputPerson.ts  Node.ts  OutputPerson.ts  Parent.ts  Person.ts  ValidationError.ts
client/api/services/: AlgebraicProblemsService.ts  ListsService.ts  RelationshipGraphService.ts
client/components/: AddNodeMenu.vue  PersonsGraph.vue
client/data/: algebraic_problems.ts  relationship_graph.ts
client/http/: algebraic_problems.ts  lists.ts  relationship_graph.ts
client/layouts/: default.vue
client/pages/: index.vue  tasks.vue
client/pages/tasks/: algebraic_problems.vue  index.vue  lists.vue  relationship_graph.vue
client/plugins/: api.ts  fetch.ts  highlight.ts  vuetify.ts
client/requests/: lists.ts  relationship_graph.ts
server/: database.py  main.py  models.py  pyproject.toml  utils.py
server/prolog/: __init__.py  prolog.py
server/prolog/programs/: algebraic_problems.pl  lists.pl  relationship_graph.pl
server/routers/: algebraic_problems_router.py  lists_router.py  relationship_graph.py  relationship_graph_router.py
