[tool.poetry]
name = "prolog-lab"
version = "0.1.0"
description = "Web application with SWI-Prolog integration"
authors = ["squak <squakrazv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pyswip = "^0.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
